--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-click==8.1.3
-cycler==0.11.0
-Flask==2.2.2
-fonttools==4.37.1
-gunicorn==20.1.0
-importlib-metadata==4.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.0
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib==3.5.3
-numpy==1.23.2
-packaging==21.3
-pandas==1.4.4
-Pillow==9.2.0
-pip==22.0.4
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.2.1
-scikit-learn==1.1.2
-scipy==1.9.1
-setuptools==58.1.0
-six==1.16.0
-threadpoolctl==3.1.0
-Werkzeug==2.2.2
-zipp==3.8.1
+click
+cycler
+Flask
+fonttools
+gunicorn
+importlib-metadata
+itsdangerous
+Jinja2
+joblib
+kiwisolver
+MarkupSafe
+matplotlib
+numpy
+packaging
+pandas
+Pillow
+pip
+pyparsing
+python-dateutil
+pytz
+scikit-learn
+scipy
+setuptools
+six
+threadpoolctl
+Werkzeug
+zipp
